Version 8.115 - 1 May 2019

- library:
  o fix _rpm_version() when rpm is translated
  o use proper versionning (RT#127142)
- testsuite:
  o make it work with rpm < 4.14.2 again
- cpan_testers:
  o add missing spec file
  o make it work with perl < 5.22.0
  o skip network tests if we don't have a downloader
  o update deps
- translations updates

Version 8.114 - 17 September 2018

- enhanced doc
- fix testsuite with rpm-4.14.2

Version 8.113 - 14 September 2018

- adapt testsuite to rpm-4.14.0~rc1
- add support for verify callback when installing (mga#23531)

Version 8.112 - 14 June 2018

- cpan testers:
  o add metadata
  o list needed deps
- urpmi_rpm-find-leaves
  o fix running with perl-5.26 (mga#23172)

Version 8.111 - 19 September 2017

- gurpmi:
  o update perl-Pango first too (mga#21425)
- urpmi:
  o update perl-base first too
  o use XML::LibXML::Parser's 'huge' option

Version 8.110 - 13 July 2017

- workaround a segfault in gurpmi (mga#21167)
- translation updates

Version 8.109 - 5 June 2017

- translation updates

Version 8.108 - 9 May 2017

- increase transaction size from 8 to 50 (mga#18426)

Version 8.107 - 26 April 2017

- make sure that urpmi.cfg is world-readable (mga#9386)
- ensure gurpmi ProgressDialog centering (mga#19196)
- update Mageia copyright statements
- translation updates

Version 8.106 - 6 December 2016

- skip kernel-firmware-nonfree too when considering real kernels
  Thus preventing kernel-firmware-nonfree being falsely detected as an orphan
  package (mga#12361)

Version 8.105 - 20 October 2016

- adapt testsuite to rpm-4.13.0~rc2

Version 8.104 - 15 October 2016

- fix more Getopt::Long breakages (drop the "gnu_compat" option)

Version 8.103 - 11 July 2016

- fix reporting progress with newer aria2 (mga#16500)
- fix Getopt::Long 4.60+ breakages (mga#17923)
- s/suggests/recommends/ in bash completion

Version 8.102 - 14 April 2016

- add --deploops & --debug-librpm to bash completion